# boosty-parser

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
src/boosty_parser/: __init__.py  chat.py  command.py  exceptions.py  session.py
tests/: test_command.py
